color contrast fixed

--- a/src/templates/blog-list.module.scss
+++ b/src/templates/blog-list.module.scss
@@ -25,7 +25,7 @@
     }
     .title-details {
         font-size: .8rem;
-        color: #777777;
+        color: #000000;
         font-style: italic;
     }
 }
