--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -3,7 +3,7 @@
 }
 
 .date {
-    color: #777777;
+    color: #000000;
     font-size: .8rem;
     font-style: italic;
 }
